# Pickleball-Chatbot-Assitant

./: .gitignore  pyproject.toml
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py
docs/: pickleball_rules.txt  pickleball_strategy.txt  pickleball_technique.txt
frontend/: index.html  script.js  style.css
